# privacy-deidentification

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.ai/: decisions.md  index.md  project-brief.md  quality-gates.md  routing.md  rules.md  state.md  tasks.md
.ai/domains/: architecture.md  coding.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  logging.py  main.py  ocr_worker.py  schemas.py
backend/app/api/: __init__.py  audits.py  config.py  documents.py  health.py  jobs.py  ocr.py  pii.py  uploads.py
backend/app/services/: __init__.py  artifact_lifecycle.py  artifact_service.py  audit_service.py  document_service.py  document_text_anchors.py  document_text_package.py  docx_extraction.py  feedback_service.py  job_models.py  job_runner.py  job_store.py  layout_text.py  ocr_adapters.py  ocr_noise.py  ocr_quality.py  ocr_service.py  ocr_worker.py  offline_ml_runtime.py  original_artifact_service.py  pdf_page_images.py  pdf_renderer.py  pii_adapters.py  pii_anchor_binding.py  pii_candidate_validation.py  pii_entity_contract.py  pii_entity_display.py  pii_grouping.py  pii_input.py  pii_input_text.py  pii_manual_addition.py  pii_ner_gliner.py  pii_overlap.py  pii_profiles.py  pii_recognizers.py  pii_review_result.py  pii_review_service.py  pii_service.py  pii_structural_validation.py  pii_validation_rules.py  (+11 more)
backend/tests/: artifact_helpers.py  conftest.py  test_anchor_bound_pii_e2e_conformance.py  test_audits.py  test_config.py  test_document_text_anchors.py  test_document_text_package.py  test_documents.py  test_health.py  test_job_api.py  test_job_store.py  test_jobs.py  test_layout_text.py  test_logging.py  test_ocr.py  test_ocr_adapters.py  test_ocr_noise.py  test_ocr_quality.py  test_ocr_worker.py  test_offline_ml_runtime.py  test_pdf_page_images.py  test_pii.py  test_pii_adapters.py  test_pii_anchor_binding.py  test_pii_binding_quality_suite.py  test_pii_candidate_validation.py  test_pii_feedback.py  test_pii_grouping.py  test_pii_input.py  test_pii_manual_addition.py  test_pii_ner_gliner.py  test_pii_overlap.py  test_pii_recognizers.py  test_pii_review.py  test_pii_review_entity_contract.py  test_pii_review_result_artifact.py  test_pii_review_result_v1.py  test_pii_review_schema.py  test_pii_structural_validation.py  test_readable_text.py  (+12 more)
docs/: windows-local-app.md
docs/adr/: 0001-stack-and-architecture.md  0002-upload-core-artifact-metadata.md  0003-audit-station.md  0004-ocr-workstation.md  0005-pii-workstation.md  0006-docx-extraction-and-pii-precision.md  0007-ocr-runtime-and-model-provisioning.md  0008-separate-upload-and-document-data-storage.md  0009-text-layer-quality-routing.md  0010-private-benchmark-runner.md  0011-engine-capability-model.md  0012-insurance-at-de-pii-recognizers.md  0013-pii-candidate-validation.md  0014-pii-candidate-validation-context-hardening.md  0015-structured-address-contact-line-recognizers.md  0016-engine-maturity-levels-0-19.md  0017-entity-taxonomy-and-risk-classes.md  0018-ocr-pii-implementation-plan.md  0019-canonical-reading-text-and-technical-raw-contract.md  0020-pii-feedback-archive-survives-document-deletion.md  0021-pii-entity-grouping-and-review-decisions.md  0022-ocr-l12-multi-column-layout-reconstruction.md  0023-runtime-worker-architecture.md  0024-ocr-l13-table-form-reconstruction-v2.md  0025-ocr-l14-quality-evidence-and-lineage-coverage.md  0026-ocr-l15-noise-token-artifact-evidence.md  0027-ocr-output-contract-v1-strategy.md  0028-pii-intake-document-text-package-v1.md  0029-pii-review-ready-entity-contract.md  0030-runtime-job-ux-notifications-v1.md  0031-text-identity-anchor-lineage-architecture.md  0032-reading-text-row-construction-lineage-v1.md  0033-pii-binding-quality-suite.md  0034-review-l8-review-result-artifact.md  0035-pii-l14-review-l10-manual-add-scope.md  0036-reading-text-row-construction-lineage-v2.md  0037-pii-result-integrity-v1.md  0038-artifact-and-document-lifecycle-integrity.md  0039-review-result-v1-unified-entity-contract.md  0040-construction-time-canonical-lineage-v3.md  (+4 more)
docs/engine/: README.md  benchmark-engine-levels.md  engine-artifacts.md  engine-settings.md  entity-taxonomy.md  ocr-engine-levels.md  ocr-layout-text-contract.md  ocr-pii-implementation-plan.md  pii-annotation-guidelines.md  pii-detection-quality-plan.md  pii-engine-levels.md  pii-structural-context-validation.md  quality-metrics.md  redaction-engine-levels.md  review-feedback-levels.md  roadmap.md  target-architecture.md  text-anchor-architecture-feasibility-audit.md  tool-strategy.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: config.ts  documents.ts  piiFeedback.ts  (+8 more)
scripts/: check-runtime-surface.py  fetch-ner-models.sh  fetch-ocr-models.sh  ocr_smoke.py  pii_smoke.py  provision_ner_models.py  provision_ocr_models.py
scripts/benchmark/: README.md  __init__.py  analyze_feedback.py  artifact_loader.py  build_groundtruth_proposal.py  document_matching.py  harvest_groundtruth.py  ocr_metrics.py  pii_matching.py  privacy_guard.py  private_benchmark.py  report_builder.py
scripts/windows/: deid.ps1  install.ps1  provision-models.ps1
(+88 files in other folders)
