[project]
name = "deidentification-backend"
version = "0.1.0"
description = "Backend API for the document de-identification pilot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pdf2image>=1.17,<2.0",
    "Pillow>=11.0,<13.0",
    "pydantic-settings>=2.4,<3.0",
    "pypdf>=5.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr==3.7.0",
    "paddlepaddle==3.3.1",
]
pii = [
    "presidio-analyzer==2.2.362",
    "spacy==3.8.14",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# conftest filters an import-time warning before importing TestClient (see the file).
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (Depends/File/...) as argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient warns about httpx; it's a transitive-dependency concern, not ours.
    # No category (it subclasses PendingDeprecationWarning, not DeprecationWarning).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
